<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/meminfoprogressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />

    <ImageView
        android:id="@+id/meminfoicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/meminfoprogressBar"
        android:src="@drawable/logo_v2" />

    <LinearLayout
        android:id="@+id/meminfolayoutSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meminfoicon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/meminfousername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_your_name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/meminfophoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:maxLines="1" />

        <CheckBox
            android:id="@+id/meminfoIsowner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/checkbox_owner"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/meminfolayoutbtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meminfolayoutSignUp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/meminfoupdateBtn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:fontFamily="@font/fauna_one"
            android:background="@drawable/cutom_button"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/meminforevokeBtn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/fauna_one"
            android:background="@drawable/cutom_button"
            android:text="@string/revoke" />

        <Button
            android:id="@+id/meminfocancelBtn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/fauna_one"
            android:background="@drawable/cutom_button"
            android:text="@string/cancel" />

    </LinearLayout>


</RelativeLayout>