<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainlogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:id="@+id/mainupdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/mainlogout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:id="@+id/mainnotice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/notice_board"
        app:layout_constraintTop_toBottomOf="@id/mainupdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>