<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/loginprogressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />

    <ImageView
        android:id="@+id/loginicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/loginprogressBar"
        android:src="@drawable/logo_v1" />

    <LinearLayout
        android:id="@+id/loginlayoutEmailPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginicon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginfieldEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/loginfieldPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginlayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginlayoutEmailPassword"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginbuttonSignIn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="150dp"
            android:fontFamily="@font/fauna_one"
            android:background="@drawable/cutom_button"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/loginbuttonSignUp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="150dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/fauna_one"
            android:background="@drawable/cutom_button"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </LinearLayout>
</RelativeLayout>